[tool.poetry]
name = "tessoku-book"
version = "0.1.0"
description = ""
authors = ["MinatoYamaguchi <minato_yamaguchi@demia.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
